# verse_bevy

./: .gitignore  .gitmodules  Cargo.toml
.cargo/: config.toml
assets/: map.ldtk
src/: audio.rs  ldtk.rs  lib.rs  loading.rs  main.rs  mainmenu.rs  player.rs
verse/: Cargo.toml
