[package]
name = "bootstrap"
version = "0.0.1"
publish = false
authors = ["Xentripetal <cyruscmartien@gmail.com>"]
edition = "2018"

# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
opt-level = 3
debug = false

# But compile the project itself in debug mode if `--release` is not passed in
[profile.dev.package.verse]
opt-level = 1
debug = true

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "verse/default"
]

native = [
    "bevy/bevy_wgpu",
    "verse/native"
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
verse = { path = "verse" }
winit = "0.24.0"

bevy_webgl2 = { version = "0.5.0", optional = true }

[build-dependencies]
embed-resource = "1.4"
