[package]
name = "verse"
version = "0.0.1"
publish = false
authors = ["Xentripetal <cyruscmartien@gmail.com>"]
edition = "2018"

# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
opt-level = 3
debug = false

# But compile the project itself in debug mode if `--release` is not passed in
[profile.dev.package.verse]
opt-level = 1
debug = true

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
futures = "0.3"
winit = "0.24.0"
bevy_ecs_tilemap = {path = "crates/bevy_ecs_tilemap"}
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.5.1" }
bevy_asset_loader = "0.4.0"
bevy-inspector-egui = "0.6.1"
rand = "0.8.3"
bevy_egui = "0.6"
ldtk_rust = "0.5.2"
anyhow = "1.0.43"
serde_json = "1.0.66"

bevy_webgl2 = { version = "0.5.0", optional = true }

[build-dependencies]
embed-resource = "1.4"
