[package]
name = "verse"
version = "0.0.1"
publish = false
authors = ["Xentripetal <cyruscmartien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy_ecs_tilemap = {git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "5717a632a2e951641389bdc772147cd1f2ad481c"}
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.5.1" }
bevy_asset_loader = "0.4.0"
rand = "0.8.3"
